z-index fix

--- a/css/main.less
+++ b/css/main.less
@@ -755,7 +755,7 @@ input[type=submit] {
 		position: absolute;
 		top: 10px;
 		right: 10px;
-		z-index: 99;
+		z-index: 0;
 	}
 	.category-filters {
 		position: absolute;
@@ -853,7 +853,7 @@ input[type=submit] {
 	overflow: visible;
 	.box-sizing(border-box);
 	margin: 0;
-	z-index: 99;
+	z-index: 0;
 	.transition(right .2s ease-in-out);
 	a {
 		color: #f0f0f0;
@@ -1911,7 +1911,6 @@ input[type=submit] {
 	padding-top: 10px;	
 	background: @main-color;
 	overflow: visible;
-	z-index: 100 !important;
 	.logo-ruler{
 		width: 767px;
 		float: left;
